close data collection visit

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=IMCLBCP41-BLL\\SQLEXPRESS2019; Database=PMS; Trusted_Connection=True; MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=IMCEBCP170-MSL2\\SQLEXPRESS2019; Database=PMS; Trusted_Connection=True; MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*",
   "JWT": {
